fix(navbar): fix logo and drawer alignment

--- a/public/css/components/navbar.css
+++ b/public/css/components/navbar.css
@@ -15,11 +15,6 @@
 	align-items: center;
 }
 
-#logo {
-	display: none;
-	padding-right: 3em;
-}
-
 .search-bar {
 	display: flex;
 	align-items: center;
@@ -43,10 +38,6 @@
 @media screen and (min-width: 768px) {
 	.navbar {
 		padding: 0.5em 1em;
-	}
-
-	#logo {
-		display: block;
 	}
 
 	#search-icon {
